# ai-tech-radar

./: .env.example  .gitignore  Makefile  README.md  compose.yaml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_article_deduplication_and_event_clusters.py  0003_article_analysis.py  0004_article_search_indexes.py  0005_article_heat_signals.py  0006_radar_editions.py  0007_radar_edition_progress.py  0008_remove_retired_sources.py  0009_writing_projects.py
backend/app/: cli.py  config.py  db.py  main.py
backend/app/analysis/: __init__.py  config.py  evaluation.py  pipeline.py  provider.py  schema.py
backend/app/api/: cursor.py  dependencies.py  queries.py  routes.py  schemas.py
backend/app/collection/: __init__.py  locking.py  registry.py  retry.py  runner.py  scheduler.py
backend/app/domain/: __init__.py  enums.py
backend/app/sources/: base.py  (+3 more)
backend/config/: analysis-offline.json  analysis.json  processing.json  schedules.json  writing.json
backend/docs/: ai-analysis.md  arxiv-collector.md  collection-scheduler.md  data-model.md  github-releases-collector.md  hugging-face-collector.md  normalization-and-clustering.md  query-api.md  writing-studio.md
backend/scripts/: seed_e2e.py  verify_e2e.py
backend/tests/: test_analysis.py  test_api.py  test_arxiv.py  test_collection.py  test_curated_sources.py  test_github_releases.py  test_health.py  test_hugging_face.py  test_migrations.py  test_models.py  test_processing.py  test_source_adapter.py  test_writing.py
(+97 files in other folders)
